# poetry-devcontainer-sample

./: .gitignore  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  postactions.sh
back/: Dockerfile  pyproject.toml
