[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["KAITO Nakatsuji <k.nakatsuji.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"



[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 112

[tool.black]
line-length = 112

[tool.flake8]
max-line-length = 112
ignore = "E203,"
